added tests for symbol

--- a/tiger_compiler/src/dune
+++ b/tiger_compiler/src/dune
@@ -10,4 +10,8 @@
 (run %{bin:ocamllex} -q -o %{target} %{deps}))))
 
 (library
-(name parsetest))
+(name parsetest)
+(libraries base stdio)
+(inline_tests)
+(preprocess (pps ppx_inline_test))
+)
