--- a/tiger_compiler/src/dune
+++ b/tiger_compiler/src/dune
@@ -12,6 +12,6 @@
 (library
 (name parsetest)
 (libraries base stdio)
+(preprocess (pps ppx_jane))
 (inline_tests)
-(preprocess (pps ppx_inline_test))
 )
